# pingana

./: .env.example  .gitignore  Cargo.toml  README.md  setting.example.yaml
.github/workflows/: build-release.yml
data/: schema.sql  seed.sql
schema/: ping_targets.sql
src/: data.rs  db.rs  env.rs  lib.rs  main.rs  settings.rs
