[package]
name = "pingana"
version = "0.1.0"
authors = ["didil <1284255+didil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9.3"
serde = {version = "1.0.102", features = ["derive"] }
reqwest = "0.10.0-alpha.1"
tokio = "0.2.0-alpha.6"
futures = "0.3"