[package]
name = "pingana"
version = "0.1.3"
authors = ["didil <1284255+didil@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.10.0-alpha.2"
tokio = { version = "=0.2.0-alpha.6", default-features = false, features = ["rt-full"] }
futures = "0.3"
mysql_async = "0.21.0-alpha.4"
log = "0.4.0"
env_logger = "0.7.1"
anyhow = "1.0.21"